@@ -1,4 +1,4 @@
-/* $Header: /home/rubik/work/pgcvs/CVSROOT/pgsql/src/interfaces/ecpg/preproc/Attic/preproc.y,v 1.190.2.3 2002-08-18 14:32:21 meskes Exp $ */
+/* $Header: /home/rubik/work/pgcvs/CVSROOT/pgsql/src/interfaces/ecpg/preproc/Attic/preproc.y,v 1.190.2.4 2002-08-20 12:23:36 meskes Exp $ */
 
 /* Copyright comment */
 %{
@@ -177,69 +177,69 @@ make_name(void)
 %token	TYPECAST
 
 /* ordinary key words in alphabetical order */
-%token <keyword> ABORT_TRANS, ABSOLUTE, ACCESS, ACTION, ADD, AFTER,
-        AGGREGATE, ALL, ALTER, ANALYSE, ANALYZE, AND, ANY, AS, ASC,
-	ASSERTION, ASSIGNMENT, AT, AUTHORIZATION,
+%token <keyword> ABORT_TRANS ABSOLUTE ACCESS ACTION ADD AFTER
+        AGGREGATE ALL ALTER ANALYSE ANALYZE AND ANY AS ASC
+	ASSERTION ASSIGNMENT AT AUTHORIZATION
 
-        BACKWARD, BEFORE, BEGIN_TRANS, BETWEEN, BIGINT, BINARY, BIT, BOTH,
-        BOOLEAN, BY,
+        BACKWARD BEFORE BEGIN_TRANS BETWEEN BIGINT BINARY BIT BOTH
+        BOOLEAN BY
 
-        CACHE, CALLED, CASCADE, CASE, CAST, CHAIN, CHAR_P,
-	CHARACTER, CHARACTERISTICS, CHECK, CHECKPOINT, CLASS, CLOSE,
-	CLUSTER, COALESCE, COLLATE, COLUMN, COMMENT, COMMIT,
-	COMMITTED, CONSTRAINT, CONSTRAINTS, CONVERSION_P, CONVERT, COPY,
-        CREATE, CREATEDB, CREATEUSER, CROSS, CURRENT_DATE, CURRENT_TIME,
-        CURRENT_TIMESTAMP, CURRENT_USER, CURSOR, CYCLE,
+        CACHE CALLED CASCADE CASE CAST CHAIN CHAR_P
+	CHARACTER CHARACTERISTICS CHECK CHECKPOINT CLASS CLOSE
+	CLUSTER COALESCE COLLATE COLUMN COMMENT COMMIT
+	COMMITTED CONSTRAINT CONSTRAINTS CONVERSION_P CONVERT COPY
+        CREATE CREATEDB CREATEUSER CROSS CURRENT_DATE CURRENT_TIME
+        CURRENT_TIMESTAMP CURRENT_USER CURSOR CYCLE
 
-        DATABASE, DAY_P, DEC, DECIMAL, DECLARE, DEFAULT, DEFERRABLE, DEFERRED,
-        DEFINER, DELETE_P, DELIMITER, DELIMITERS, DESC, DISTINCT, DO, DOMAIN_P, DOUBLE, DROP,
-        EACH, ELSE, ENCODING, ENCRYPTED, END_TRANS, ESCAPE, EXCEPT, EXCLUSIVE,
-        EXECUTE, EXISTS, EXPLAIN, EXTERNAL, EXTRACT,
+        DATABASE DAY_P DEC DECIMAL DECLARE DEFAULT DEFERRABLE DEFERRED
+        DEFINER DELETE_P DELIMITER DELIMITERS DESC DISTINCT DO DOMAIN_P DOUBLE DROP
+        EACH ELSE ENCODING ENCRYPTED END_TRANS ESCAPE EXCEPT EXCLUSIVE
+        EXECUTE EXISTS EXPLAIN EXTERNAL EXTRACT
 
-        FALSE_P, FETCH, FLOAT_P, FOR, FORCE, FOREIGN, FORWARD, FREEZE, FROM,
-        FULL, FUNCTION,
+        FALSE_P FETCH FLOAT_P FOR FORCE FOREIGN FORWARD FREEZE FROM
+        FULL FUNCTION
 
-	GET, GLOBAL, GRANT, GROUP_P,
-        HANDLER, HAVING, HOUR_P,
+	GET GLOBAL GRANT GROUP_P
+        HANDLER HAVING HOUR_P
 
-	ILIKE, IMMEDIATE, IMMUTABLE, IN_P, INCREMENT, INDEX, INHERITS,
-        INITIALLY, INNER_P, INOUT, INPUT, INSENSITIVE, INSERT, INSTEAD, INT,
-        INTEGER, INTERSECT, INTERVAL, INTO, INVOKER, IS, ISNULL, ISOLATION,
+	ILIKE IMMEDIATE IMMUTABLE IN_P INCREMENT INDEX INHERITS
+        INITIALLY INNER_P INOUT INPUT INSENSITIVE INSERT INSTEAD INT
+        INTEGER INTERSECT INTERVAL INTO INVOKER IS ISNULL ISOLATION
 			
-        JOIN,
-        KEY,
+        JOIN
+        KEY
 
-	LANCOMPILER, LANGUAGE, LEADING, LEFT, LEVEL, LIKE, LIMIT, LISTEN,
-        LOAD, LOCAL, LOCATION, LOCK_P,
+	LANCOMPILER LANGUAGE LEADING LEFT LEVEL LIKE LIMIT LISTEN
+        LOAD LOCAL LOCATION LOCK_P
 
-	MATCH, MAXVALUE, MINUTE_P, MINVALUE, MODE, MONTH_P, MOVE,
+	MATCH MAXVALUE MINUTE_P MINVALUE MODE MONTH_P MOVE
 
-	NAMES, NATIONAL, NATURAL, NCHAR, NEW, NEXT, NO, NOCREATEDB,
-        NOCREATEUSER, NONE, NOT, NOTHING, NOTIFY, NOTNULL, NULL_P, NULLIF,
-        NUMERIC,
+	NAMES NATIONAL NATURAL NCHAR NEW NEXT NO NOCREATEDB
+        NOCREATEUSER NONE NOT NOTHING NOTIFY NOTNULL NULL_P NULLIF
+        NUMERIC
 
-	OF, OFF, OFFSET, OIDS, OLD, ON, ONLY, OPERATOR, OPTION, OR, ORDER,
-        OUT_P, OUTER_P, OVERLAPS, OVERLAY, OWNER,
+	OF OFF OFFSET OIDS OLD ON ONLY OPERATOR OPTION OR ORDER
+        OUT_P OUTER_P OVERLAPS OVERLAY OWNER
 
-	PARTIAL, PASSWORD, PATH_P, PENDANT, PLACING, POSITION, PRECISION, PRIMARY,
-	PRIOR, PRIVILEGES, PROCEDURE, PROCEDURAL,
+	PARTIAL PASSWORD PATH_P PENDANT PLACING POSITION PRECISION PRIMARY
+	PRIOR PRIVILEGES PROCEDURE PROCEDURAL
 
-	READ, REAL, RECHECK, REFERENCES, REINDEX, RELATIVE, RENAME, REPLACE,
-	RESET, RESTRICT, RETURNS, REVOKE, RIGHT, ROLLBACK, ROW, RULE,
+	READ REAL RECHECK REFERENCES REINDEX RELATIVE RENAME REPLACE
+	RESET RESTRICT RETURNS REVOKE RIGHT ROLLBACK ROW RULE
 
-	SCHEMA, SCROLL, SECOND_P, SECURITY, SELECT, SEQUENCE, SERIALIZABLE,
-        SESSION, SESSION_USER, SET, SETOF, SHARE, SHOW, SIMILAR, SIMPLE, SMALLINT, SOME,
-        STABLE, START, STATEMENT, STATISTICS, STDIN, STDOUT, STORAGE, STRICT,
-        SUBSTRING, SYSID,
+	SCHEMA SCROLL SECOND_P SECURITY SELECT SEQUENCE SERIALIZABLE
+        SESSION SESSION_USER SET SETOF SHARE SHOW SIMILAR SIMPLE SMALLINT SOME
+        STABLE START STATEMENT STATISTICS STDIN STDOUT STORAGE STRICT
+        SUBSTRING SYSID
 
-        TABLE, TEMP, TEMPLATE, TEMPORARY, THEN, TIME, TIMESTAMP, TO, TOAST,
-        TRAILING, TRANSACTION, TREAT, TRIGGER, TRIM, TRUE_P, TRUNCATE, TRUSTED, TYPE_P,
-        UNENCRYPTED, UNION, UNIQUE, UNKNOWN, UNLISTEN, UNTIL, UPDATE, USAGE,
-        USER, USING,
+        TABLE TEMP TEMPLATE TEMPORARY THEN TIME TIMESTAMP TO TOAST
+        TRAILING TRANSACTION TREAT TRIGGER TRIM TRUE_P TRUNCATE TRUSTED TYPE_P
+        UNENCRYPTED UNION UNIQUE UNKNOWN UNLISTEN UNTIL UPDATE USAGE
+        USER USING
 
-        VACUUM, VALID, VALUES, VARCHAR, VARYING, VERBOSE, VERSION, VIEW, VOLATILE,
-	WHEN, WHERE, WITH, WITHOUT, WORK, WRITE,
-        YEAR_P,
+        VACUUM VALID VALUES VARCHAR VARYING VERBOSE VERSION VIEW VOLATILE
+	WHEN WHERE WITH WITHOUT WORK WRITE
+        YEAR_P
         ZONE
 
 /* The grammar thinks these are keywords, but they are not in the keywords.c
