@@ -1283,6 +1283,10 @@ Sun Aug 18 16:09:06 CEST 2002
         - Synced preproc.y with gram.y.
         - Synced pgc.l with scan.l.
         - Synced keywords.c.
+
+Tue Aug 20 14:13:34 CEST 2002
+
+	- Removed ',' from preproc.y to bit bison 1.49b.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
